add Phoenix service image and update documentation to include visual reference

--- a/marketplace/docs/content/services/phoenix.mdx
+++ b/marketplace/docs/content/services/phoenix.mdx
@@ -17,6 +17,8 @@ Phoenix integration with ARK provides:
 - **Interactive Dashboard**: Visualize traces, metrics, and evaluation results
 - **Multi-namespace Support**: OTEL environment variables automatically configured
 
+![Trace in Phoenix](./images/phoenix.png)
+
 ## Quick Start
 
 ### Installation
