--- a/docs/content/developer-guide/observability/phoenix-service.mdx
+++ b/docs/content/developer-guide/observability/phoenix-service.mdx
@@ -9,4 +9,4 @@ description: AI/ML observability and evaluation platform for monitoring agent pe
 
 ---
 
-**Previous**: [Langfuse Service](/developer-guide/observability/langfuse-service)
+**Next**: [Langfuse Service](/developer-guide/observability/langfuse-service)
