--- a/marketplace/docs/content/index.mdx
+++ b/marketplace/docs/content/index.mdx
@@ -20,6 +20,7 @@ The marketplace is a curated collection of:
 Currently available services:
 
 - **[Phoenix](/services/phoenix)** - AI/ML observability and evaluation platform with OpenTelemetry integration
+- **[Langfuse](/services/langfuse)** - Open-source LLM observability and analytics platform with session tracking
 
 ## Quick Start
 
