fix broken link

--- a/docs/content/marketplace/index.mdx
+++ b/docs/content/marketplace/index.mdx
@@ -39,7 +39,7 @@ The marketplace is located at `marketplace/` in the repository root and includes
 
 Currently available services:
 
-- **[Phoenix](./services/phoenix)** - AI/ML observability and evaluation platform with OpenTelemetry integration
+- **[Phoenix](/marketplace/services/phoenix)** - AI/ML observability and evaluation platform with OpenTelemetry integration
 
 ## Quick Install Example
 
