fix: update Langfuse service link to use absolute path

--- a/docs/content/marketplace/index.mdx
+++ b/docs/content/marketplace/index.mdx
@@ -40,7 +40,7 @@ The marketplace is located at `marketplace/` in the repository root and includes
 Currently available services:
 
 - **[Phoenix](/marketplace/services/phoenix)** - AI/ML observability and evaluation platform with OpenTelemetry integration
-- **[Langfuse](./services/langfuse)** - Open-source LLM observability and analytics platform with session tracking
+- **[Langfuse](/marketplace/services/langfuse)** - Open-source LLM observability and analytics platform with session tracking
 
 ## Quick Install Example
 
